# ChessGame

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Makefile  Piece.cpp  Piece.h  README.md  main.cpp  main.h
include/: Board.h  ChessTypes.h  EventCommand.h  Game.h  SlideMoves.h
src/: Board.cpp  EventCommand.cpp  Game.cpp  SlideMoves.cpp  main.cpp
